--- a/རྫོང་ཁག་ཚུའི་བཅུད་སྡུད།.mw
+++ b/རྫོང་ཁག་ཚུའི་བཅུད་སྡུད།.mw
@@ -94,6 +94,28 @@
 རྫོང་ཁག་འདི་ནང་ རིགས་གསུམ་པདྨའི་ལྡུམ་རྭ་དང་པདྨ་ཆོས་གླིང་སྐྱེས་ཚལ་ལྡུ་རྭ་ རྩི་རང་རྣམ་རྒྱལ་ཆོས་གླིང་གྲྭ་ཚང་དང་གནས་ལ་སོགས་པའི་ ས་ཆ་དགའ་ཏོག་ཏོ་ལེ་ཤ་ཡོདཔ་ཨིན།<br>
 རྫོང་ཁག་འདི་གིས་ གོང་འཕེལ་གྱི་ལས་སྣ་དང་འཆར་གཞི་ག་ཅི་ར་བརྩམས་རུང་ ཁོང་རའི་འཆར་སྣང་དང་དམིགས་སྐྱེད་ དམིགས་ཡུལ་ཚུ་ལུ་གཞི་བཞག་ སྟེ་འབད་དོ་ཡོདཔ་ཨིན། རྫོང་ཁག་འདི་གི་འཆར་སྣང་འདི་ཡང་ ཤུགས་ཚད་དང་ལྡན་པའི་དཔལ་འབྱོར། ལམ་སྲོལ་གྱིས་ཕྱུགཔ། ཉམས་མེད་རང་བཞིན་གནས་སྟངས་དང་མཐུན་པའི་རྫོང་ཁག་ཅིག་སྦེ་བཞག་ནི་དང་ དེའི་དམིགས་སྐྱེད་  སྤུད་ཚད་ལྡན་པའི་གཞི་རྟེན་མཁོ་ཆེ་གོང་འཕེལ་གྱི་ཐོག་ལས་ ཡུན་བརྟན་མི་སྡེའི་དཔལ་འབྱོར་གོང་འཕེལ་གཏང་ནི་དང་  འཇོན་ཐང་ཅན་དང་དོན་སྨིན་ཅན་གྱི་མི་དམངས་ཞབས་ཏོག་ཕུལ་ནི། ལམ་སྲོལ་དང་སྔར་སྲོལ་ཚུ་ཉམས་སྲུང་དང་གོང་འཕེལ་གཏང་ནི་ཚུ་ཨིནམ་ མ་ཚད་ དམིགས་ཡུལ་ གྲོང་གསེབ་བཟའ་ཚང་གི་འོང་འབབ་དང་བཟའ་འཐུང་གི་སྲུང་སྐྱོབ་ཡར་དྲག་གཏང་ནི་དང་ཤེས་ཡོན་གྱི་གོ་སྐབས། སྤུས་ཚད། འབྲི་ལྷག་ཤེས་ཡོན་ཚུ་ཡར་དྲག་གཏང་ནི། མི་སྡེའི་གསོ་བ་དང་འཕྲོད་བསྟེན་ཡར་འཕར་གཏང་ནི། གྲམ་ཕུག་ཁྲོམ་གྱི་ཁྲོམ་ཚོགས་གཞི་རྟེན་ཡར་རྒྱས་གཏང་ནི། ཆོས་དང་ལམ་སྲོལ། སྔར་སྲོལ་ཚུ་མི་ཉམས་རྒྱུན་སྐྱོང་དང་གོང་འཕེལ་གཏང་ནི། འཇོན་ཐང་ཅན་དང་དོན་སྨིན་ཅན་གྱི་མི་སྡེ་ཞབས་ཏོག་ཡར་དྲག་གཏང་ནི། ས་གནས་ཀྱི་དཔལ་འབྱོར་རྩ་བརྟན་དང་ཡར་དྲག་གཏང་ནི། རྫོང་ཁག་གི་གནས་ཚད་ནང་ དུས་ཐོག་ལུ་འབྲེལ་བ་ཡོདཔ་དང་བློ་གཏད་ཚུགས་པའི་གནས་སྡུད་དང་གནས་ཚུལ་ཚུ་ཡོདཔ་ངེས་བརྟན་བཟོ་ནི། ངན་ལྷད་སྔོན་འགོག་འབད་ནི་ཚུ་ཨིན་པས།</big>
 
+=== བུམ་ཐང་། ===
+<big>༉ བུམ་ཐང་རྫོང་ཁག་འདི་ འབྲུག་རྒྱལ་ཁབ་ཤར་ནུབ་དབུས་གསུམ་སྦེ་ཕྱེས་པའི་ནང་ལས་ དབུས་ཕྱོགས་ལུ་རྒྱ་མཚོའི་ཁ་ལས་མཐོ་ཚད་མི་ཊར་ ༢༠༠༠-༦༨༠༠ གི་ས་ཁར་ཆགས་ཏེ་ཡོདཔ་ཨིན། བུམ་ཐང་རྫོང་ཁག་གི་སའི་རྒྱ་ཚད་འདི་ ཀི་ལོ་མི་ཊར་གྲུ་བཞི་ ༡༦༦༧.༧༦ དེ་ཅིག་ཡོདཔ་དང་ རྒེད་འོག་ ༤ དང་སྤྱི་འོག་ ༢༠ ནང་ལུ་མི་རློབས་ཡང་ འབྲུག་གི་མི་རློབས་དང་ཁྱིམ་གྱི་གྲངས་རྩིས་ ༢༠༡༧ ཅན་ལྟར་དུ་འབད་བ་ཅིན་ ༡༧༨༢༠ ཡོདཔ་ཨིན། རྒེད་འོག་བཞིཔོ་འདི་ཡང་ ཆོས་འཁོར། ཆུ་སྨད། སྟང་དང་ཨུ་ར་ཚུ་ཨིན་མས།<br>
+རྫོང་ཁག་འདི་གི་མིང་ལུ་ བུམ་ཐང་ཟེར་སླབ་དགོ་མི་འདི་ ཡུལ་གྱི་སའི་དབྱིབས་བདུད་རྩི་གིས་གང་བའི་བུམ་པ་དང་འདྲ་ནི་དེ་གིས་ བུམ་པ་དང་ ལག་མཐིལ་བཟུམ་སྦེ་ས་འཁོད་སྙོམས་པའི་ཐང་ནང་ལུ་ བརྒྱན་ཏེ་ཡོདཔ་དང་འདྲ་བའི་དཔེ་ལས་ བཀྲིས་གཡང་ཆགས་སྦས་ཡུལ་བུམ་ཐང་ཟེར་ཡོངས་སུ་གྲགས་ནུག།<br>
+རྫོང་ཁག་འདི་ནང་ སྔོན་དུས་རབས་བདུན་པའི་ནང་ བོད་ཀྱི་སྤྲུལ་པའི་ཆོས་རྒྱལ་སྲོང་བཙན་སྒམ་པོ་གིས་ བཞེངས་གནང་བའི་མཐའ་འདུལ་ཡང་འདུལ་གྱི་གཙུག་ལག་ཁང་གི་ནང་གསེས་ བྱམས་པ་ལྷ་ཁང་གི་གཙོས་པའི་རྩེ་ལུང་ངམ་དཀོན་མཆོག་གསུམ་ལྷ་ཁང་དང་ པད་མའི་ལྷ་ཁང་བཅས་ཆོས་འཁོར་རྣམ་གསུམ་གྱི་ལྷ་ཁང་། དུས་རབས་བརྒྱད་པའི་ནང་ ཨོ་རྒྱན་གྱི་སློབ་དཔོན་ཆེན་པོ་པདྨ་འབྱུང་གནས་མཆོག་ ལྗོངས་འདི་ནང་འགོ་ཐོག་ཞབས་སོར་བཀོད་དེ་ ཆོས་འཁོར་ཐོག་མར་བསྐོར་གནང་བའི་གནས་ ཟངས་མདོག་དཔལ་རི་གཉིས་པ་སྐུ་རྗེས་བྲག་དམར་རྡོ་རྗེ་བརྩེགས་པའི་ལྷ་ཁང་དང་། ཤུགས་བྲག། ཀུན་བཟང་བྲག། ཐ་བ་བྲག་དང་ ཆོས་རྗེ་བྲག་བཅས་བྲག་བཞི་གིས་གཙོས་པའི་གནས་ཆེན་མང་རབས་ཅིག་མཇལ་ནི་ཡོད། <br>
+དེ་བཟུམ་སྦེ་ དུས་རབས་བཅུ་བཞི་པའི་ནང་ལུ་ ཀུན་མཁྱེན་ཆོས་ཀྱི་རྒྱལ་པོ་ རྒྱལ་བ་ཀློང་ཆེན་རབ་འབྱམས་མཆོག་བྱོན་ཏེ་ གདན་ས་གླིང་བརྒྱད་བཏབ་གནང་ཡོད་པའི་ནང་ལས་གཙོ་བོ་ བབཿརོན་ཐར་པ་གླིང་དང་ བཞུགས་གནས་བསམ་གཏན་གླིང་། ཤིང་མཁར་བདེ་ཆེན་གླིང་། སྟང་ཨྱོན་ཆོས་གླིང་ཚུ་མཇལ་ནི་ཡོད། དུས་རབས་བཅོ་ལྔ་པའི་ནང་ གཏེར་ཆེན་རྒྱལ་པོ་ལྔའི་ཡ་གྱལ་ རིག་འཛིན་པདྨ་གླིང་པའི་གདན་ས་ གཏམ་ཞིང་ལྷུན་གྲུབ་ཆོས་གླིང་གི་གཙོས་པའི་ཆོས་ནོར་ཟབ་གཏེར་ལེ་ཤ་ཅིག་བཞེས་སའི་གནས་མཆོག་ སྟང་མེ་འབར་མཚོ་ལ་སོགས་པའི་གནས་ཆེན་ལེ་ཤ་མཇལ་ནི་ཡོད་པའི་གུར་ ལྷག་པར་དུ་ དུས་རབས་བཅུ་དྲུག་པ་སྐོར་ཆ་ལུ་བྱོན་མི་ ཡོངས་འཛིན་ངག་གི་དབང་ཕྱུག་གིས་ཕྱག་བཏབ་གནང་བའི་བྱ་དཀར་གཡུལ་ལས་རྣམ་རྒྱལ་ཕོ་བྲང་ཟེར་ ད་ལྟོ་རྫོང་ཁག་འདི་གི་ལུགས་གཉིས་ཀྱི་ཆབ་སྲིད་འཛིན་སྐྱོང་གནང་སའི་རྫོང་གཞིས་ལྟེ་བ་འདི་མཇལ་ནི་ཡོད།<br>
+རྫོང་ཁག་འདི་གི་འཆར་སྣང་འདི་ མི་སྡེའི་དཔལ་འབྱོར་ཡུན་བརྟན་དང་ ལམ་སྲོལ་དང་སྐྱེ་ལྡན་རིགས་སྣ་གིས་ཕྱུག་པའི་ཁར་ འཇོན་ཐང་ཅན་གྱི་ཞབས་ཏོག་དང་ལྡན་པའི་ དགའ་སྐྱིད་ཀྱི་དཔེ་སྟོན་རྫོང་ཁག་ཅིག་བཟོ་ནི་འདི་ཨིན་མས། དེ་བཟུམ་སྦེ་ དམིགས་ཡུལ་འདི་འབད་བ་ཅིན་ རྫོང་ཁག་འདི་ནང་གི་དཔལ་འབྱོར་གོང་འཕེལ་ཡུན་བརྟན་འགྲུབ་ནི། སྔར་སྲོལ་ལམ་ལུགས་བཟང་པོ་ཚུ་ལག་ལེན་འཐབ་ནི་དང་ མི་ཉམས་རྒྱུན་སྐྱོང་འབད་ནི། སྐྱེ་ལྡན་རིགས་སྣ་ཉེན་སྲུང་དང་ཉམས་སྲུང་འབད་ནི། སྤུས་ཚད་ཅན་གྱི་མི་དམངས་ཞབས་ཏོག་ཕུལ་ནི་ཚུ་ལུ་གཙོ་བོར་གཟུངམ་ཨིན་མས།</big>
+
+=== དགའ་ས། ===
+<big>༉ དགའ་ས་འདི་ རྫོང་ཁག་ཁལ་གཅིག་ལས་ བྱང་ཕྱོགས་ཁ་ཐུག་ལུ་ རྒྱ་མཚོའི་མཐའ་མ་ལས་མཐོ་ཚད་མི་ཊར་ ༡༥༠༠-༤༥༠༠ གི་ནང་འཁོད་ལུ་ཆགས་ཏེ་ཡོདཔ་ཨིན། དེ་ཡང་སྤུ་ན་ཁ་དང་ཐིམ་ཕུག་ དབང་འདུས་རྫོང་ཁག་གི་ས་མཚམས་ཚུ་མཐུད་ཡོདཔ་མ་ཚད་ བྱང་ཁ་ཐུག་ལས་རང་སྐྱོང་མངའ་སྡེ་བོད་གཡུས་ཀྱི་སྐོར་ཏེ་ཡོདཔ་ཨིན། དགའ་ས་རྫོང་ཁག་གི་སའི་རྒྱ་ཚད་ གྲུ་བཞི་ཀི་ལོ་མི་ཊར་ ༣༠༨༡.༧༧ དེ་ཅིག་ཡོདཔ་དང་རྒེད་འོག་ ༤ ནང་ མི་རློབས་ ༢༩༧༠ ཡོདཔ་ཨིན། རྒེད་འོག་ ༤ འི་གྲས་ལས་ མཐའ་ཟུར་དང་ཐག་རིང་ཤོས་འདི་ར་ལུང་ནག་ན་རྒེད་འོག་འདི་ཨིན། རྒེད་འོག་བཞིཔོ་འདི་ཡང་ དགོན་ཁ་སྟོད་དང་། དགོན་ཁ་སྨད། ལ་ཡག། ལུང་ནག་ན་བཅས་ཨིན།<br>
+དགའ་ས་རྫོང་ཁག་གི་ས་གནས་མང་ཤོས་ཅིག་ནང་ གནམ་དགུན་གྱི་དུས་ཚོད་རིངམོ་སྦེ་ཡོད་པའི་ཁར་ ཁཝ་རྒྱུན་མ་ཆད་པར་རྐྱབ་དོ་ཡོད་རུང་ གནམ་བྱཱར་གྱི་དུས་ཚོད་ལུ་ གནམ་གཤིས་དགའ་ཏོག་ཏོ་ཡོདཔ་ཨིན། དགའ་ས་རྫོང་ཁག་ནང་ལུ་ ཁ་སྐད་གཙོ་བོ་འདི་རྫོང་ཁ་ར་རྐྱབ་ཨིན་རུང་ ལ་ཡགཔ་དང་ལུང་ནགཔ་ཚུ་གིས་ལག་ལེན་འཐབ་མི་ཁ་སྐད་འདི་ རྫོང་ཁ་ལས་དུམ་གྲ་རེ་མ་འདྲཝ་ཡོདཔ་ཨིན། ལ་ཡག་རྒེད་འོག་གི་ཨམ་སྲུ་ཚུའི་རྒྱན་ཆ་འདི་ གཞན་དང་མ་འདྲཝ་ཅིག་སྦེ་ཡོདཔ་ལས་ ཕྱི་ནང་གི་ལྟ་བཤལཔ་ཚུ་གི་མིག་གི་མཛེས་རྒྱན་འཇའ་ཤོས་ཅིག་དང་ རྒྱལ་ཁབ་ནང་འཁོད་ཀྱི་ལུང་ཕྱོགས་སོ་སོའི་གྱོན་ཆས་ཚུ་གི་གྲས་ལས་ ཐུན་མོང་མ་ཡིན་པ་ཅིག་ཡང་ཨིན།<br>
+དགའ་ས་རྫོང་ཁག་འདི་ གངས་རི་གིས་མཐའ་བསྐོར་ཏེ་ཡོདཔ་ལས་ གངས་ཆེན་ཚུ་མཛེས་ཏོག་ཏོ་དང་འཇའ་ཆི་ཆི་སྦེ་མཐོང་དོ་ཡོདཔ་མ་ཚད་ རྒྱལ་ཁབ་ཀྱི་ཆུ་ཆེན་ལེ་ཤ་ར་རྫོང་ཁག་འདིའི་རི་བོ་གངས་ཅན་ཚུ་ལས་འབབ་དོ་ཡོདཔ་ཨིན། ཆུ་ཆེན་ཕོ་ཆུ་མོ་ཆུ་འདི་ དགའ་ས་རྫོང་ཁག་གི་ལ་གཡག་དང་ལུང་ནག་ན་རྒེད་འོག་ ༢ ལས་འབབ་དོ་ཡོདཔ་དང་། སྤུ་ན་གཙང་ཆུ་ལས་སུན་ཀོཤ་བརྒྱུད་དེ་མཐའ་མཇུག་རྒྱ་གར་རྒྱལ་ཁབ་ནང་འཐོན་འགྱོ་དོ་ཡོདཔ་ཨིན།<br>
+དགའ་ས་རྫོང་ཁག་འདི་ འཇིགས་མེད་རྡོ་རྗེ་དབང་ཕྱུག་རྒྱལ་ཡོངས་གླིང་ཀའི་ས་ཁོངས་ནང་ཚུད་དེ་ཡོདཔ་ལས་ རི་དྭགས་སེམས་ཅན་དང་ བྱའི་རིགས་མ་འདྲཝ་ཚུ་མཐོང་ཚུགསཔ་ཨིན། རྫོང་ཁག་འདི་ བརྒྱ་ཆ་ ༦༨% དེ་ཅིག་ནགས་ཚལ་གྱིས་ཁྱབ་སྟེ་ཡོད་པའི་གྲས་ལས་ བརྒྱ་ཆ་ ༣༥% དེ་ཅིག་ཚལ་མ་ཨིནམ་དང་ བརྒྱ་ཆ་ ༢༧% དེ་ཅིག་གདུང་ཤིང་། བརྒྱ་ཆ་ ༡༥% དེ་ཅིག་ཀོང་ཤིང་དང་སླ་བསྲེས་སྦེ་ཡོདཔ་མ་ཚད་ བརྒྱ་ཆ་ ༤% དེ་ཅིག་འདབ་མ་སྦོམ་ཡོད་པའི་ཤིང་རིགས་ཚུ་ཡོདཔ་ཨིན། དགའ་ས་རྫོང་ཁག་འདི་ སྨན་ཆུ་དང་ཚ་ཆུ་གི་གང་སྟེ་ཡོདཔ་ལས་ ལོ་ཨ་རྟག་ར་མི་སྟོང་ཕྲག་ལས་བཅད་དེ་ ཚུ་ཆུ་དང་སྨན་ཆུ་སྦང་པར་འོང་དོ་ཡོདཔ་ཨིན། རྫོང་ཁག་འདི་ ས་ཁ་མཐོ་ས་ཅིག་ནང་འབདཝ་ལས་ མང་ཤོས་ར་འཚོ་བ་གཙོ་བོ་ལ་ནོར་ལུ་བརྟེན་ཏེ་སྡོད་དོ་ཡོདཔ་ཨིན།<br>
+དགའ་ས་རྫོང་ཁག་འདི་ འབྲུག་པའི་རྒྱལ་རབས་ནང་ལུ་ག་ནི་བ་རྩ་ཆེ་བའི་ས་གནས་ཅིག་ཨིན། དེ་ཡང་ ཁ་བཞིའི་ལྷོའི་རྒྱལ་ཁབ་དུམ་བུ་གཅིག་ལུ་བསྒྱུར་གནང་མི་ མཐུ་ཆེན་ཆོས་ཀྱི་རྒྱལ་པོ་དཔལ་འབྲུག་པ་རིན་པོ་ཆེ་སྐྱབས་མགོན་ངག་དབང་རྣམ་རྒྱལ་མཆོག་ ལྗོངས་འདི་ནང་འགོ་ཐོག་གདན་འདྲེན་ཞུ་མི་བུ་སློབ་ཡོན་བདག་ཚུ་གི་གྲས་ལས་ཐོག་མ་ཨིན་མི་ སྡེ་སྲིད་ཆེན་པོ་དབུ་མཛད་བསྟན་འཛིན་འབྲུག་རྒྱལ་གྱི་འཁྲུངས་ཡུལ་ཨིན་པ་གིས་མ་ཚད་ སྐྱབས་མགོན་རིན་ཆེའི་ཞབས་སོར་བཀོད་པའི་འབྱོན་ལམ་ཡང་ བོད་འབྲུག་གཉིས་ཀྱི་བར་ཡོད་པའི་ཝ་སྐད་ལ་བརྒལ་ཏེ་ ལ་ཡག་ལུང་མགོ་ལས་བརྒྱུད་དེ་དགའ་ས་རྫོང་ཁག་ནང་ལུ་བྱོན་བྱོནམ་ཨིན་མས། སྡེ་སྲིད་དབུ་མཛད་ཆེན་མོ་བསྟན་འཛིན་འབྲུག་རྒྱལ་འདི་ གྲུབ་ཐོབ་གཏེར་ཁུངས་པའི་བརྒྱུད་འཛིན་དགོན་འོབ་འཚོ་བླ་མའི་བརྒྱུད་པ་ཨིནམ་ལས་ དེ་གི་རྫོང་ཤུལ་འདི་ད་ལྟོའི་བར་ན་ཡང་མཇལ་ཚུགསཔ་ཨིན།</big>
+
+=== སྤ་རོ། ===
+<big>༉ སྤ་རོ་རྫོང་ཁག་འདི་ རྒྱལ་ས་ལྟེ་བ་ལས་ནུབ་བྱང་ཁ་ཐུག་ལུ་ རྒྱ་མཚོ་མཐའ་མ་ལས་མཐོ་ཚད་མི་ཊར་ ༢,༢༥༠ གི་ས་གནས་ཁར་ཆགས་ཏེ་ཡོདཔ་ཨིན། དེ་ཡང་ ཧཱ་དང་ཐིམ་ཕུག་རྫོང་ཁག་གཉིས་ཀྱི་ས་མཚམས་ཚུ་མཐུད་ཡོདཔ་མ་ཚད་ བྱང་ཁ་ཐུག་ལུ་ ཡོངས་གྲགས་ཅན་གྱི་ཇོ་མོ་ལྷ་རི་གངས་དང་ སྔོན་མ་བོད་འབྲུག་གཉིས་ཀྱི་བར་ན་ ཚོང་འབྲེལ་འཐབ་སའི་ས་གནས་གཙོ་བོ་ཅིག་ཨིན་མི་ ཕག་རི་ཟེར་མི་དེ་ཁར་འགྱོ་སའི་ལམ་འདི་ཡང་ རྫོང་ཁག་འདི་ནང་ལས་སྦེ་འགྱོ་དགོཔ་ཨིན། སྤ་རོ་རྫོང་ཁག་གི་སའི་རྒྱ་ཚད་ ཀི་ལོ་མི་ཊར་གྲུ་བཞི་ ༡༢༩༣ དེ་ཅིག་ཡོདཔ་དང་ རྒེད་འོག་ ༡༠ ནང་ལུ་ མི་རློབས་ཡོངས་བསྡོམས་ ༣༥,༢༦༠ ཡོདཔ་ཨིན། བསིལ་དྲོད་ཀྱི་ཐད་ལུ་འབད་བ་ཅིན་ གནམ་བྱཱར་ལུ་ དྲོད་ཚད་ཌི་གི་རི་ ༢༦ ལས་ ༡༤ ཚུན་དང་ གནམ་དགུན་ལུ་ དྲོད་ཚད་ཌི་གི་རི་ ༡༤ ལས་ མའི་ནསི་ ༥ ཚུན་ལུ་འབབ་ཨིན།<br>
+སྤ་རོ་འདི་ ཚ་དྲོད་ལྡན་པའི་ས་གནས་ཅིག་འབདཝ་ལས་ ཤིང་འབྲས་དང་འབྲུ་སྣ་དགུའི་རིགས་ཚུ་ག་ཅི་ར་བཙུགས་རུང་ ཚོ་ཚུགས་པའི་ཁར་ འབྲུག་གཞུང་གི་ཁ་ཐུག་ལས་ སོ་ནམ་འཕྲུལ་ཆས་ཀྱི་རྒྱབ་སྐྱོར་རྒྱ་ཆེ་དྲགས་སྦེ་ གནང་ཡོད་མི་ལས་བརྟེན་ མི་སེར་སོ་ནམ་པ་མང་ཤོས་ར་ ཞིང་ལཱ་འབད་ནིའི་ནང་གཙོ་བོ་བཏོན་ཏེ་ཡོད། ང་བཅས་རའི་རྒྱལ་ཁབ་ནང་ལུ་ རྒྱལ་སྤྱིའི་གནམ་གྲུ་ཐང་ཕུད་རྡོག་གཅིག་ལས་མེད་མི་འདི་ རྫོང་ཁག་འདི་ནང་ཨིནམ་ལས་བརྟེན་ རྒྱལ་སྤྱི་དང་མཐུད་འབྲེལ་འབད་སའི་ས་ཁོངས་གལ་ཅན་ཅིག་ཡང་ཨིན། དེ་གིས་སྦེ་ སྤ་རོ་གྱི་ཚོང་པ་དང་ སོ་ནམ་པ་ཚུ་ལུ་ཡང་ ལག་བཟོ་དང་སོ་ནམ་གྱི་ཐོན་སྐྱེད་ཚུ་ ཕྱི་ནང་གི་ལྟ་བཤལ་པ་ཚུ་དང་གཅིག་ཁར་ཚོང་འབྲེལ་འཐབ་སྟེ་ ཁེ་ཕན་སྦོམ་སྦེ་བྱུང་སྟེ་ཡོདཔ་ཨིན།<br>
+སྤ་རོ་རྫོང་ཁག་འདི་ འབྲུག་པའི་རྒྱལ་རབས་ནང་ལུ་ ག་ནི་བ་རྩ་བའི་རྫོང་ཁག་ཅིག་སྦེ་ཚུད་དེ་ཡོདཔ་ཨིན། དེ་ཡང་ སྔོན་བྱོན་རྒྱལ་བ་གོངམ་མང་རབས་ཅིག་གི་ཞབས་ཀྱིས་བཅགས་ཏེ་ བྱིན་གྱིས་བརླབས་པའི་གནས་ཁྱད་པར་ཅན་ལེ་ཤ་ཡོད། དཔེར་ན། སྔོན་དུས་རབས་བདུན་པའི་ནང་ལུ་ བོད་ཀྱི་ཆོས་རྒྱལ་སྲོང་བཙན་སྒམ་པོ་གིས་ བཞེངས་གནང་བའི་མཐའ་འདུལ་ཡང་འདུལ་གྱི་གཙུག་ལག་ཁང་གི་གྲས་ལས་ སྐྱེར་ཆུ་ལྷ་ཁང་དང་།<br>
+དུས་རབས་བརྒྱད་པའི་ནང་ ཨོ་རྒྱན་གྱི་སློབ་དཔོན་ཆེན་པོ་པདྨ་འབྱུང་གནས་མཆོག་གིས་ བྱིན་གྱིས་བརླབས་པའི་གནས་ཆེན་ སྟག་ཚང་སེང་གེ་བསམ་གྲུབ་ཀྱིས་གཙོས་པའི་ཆུ་མོ་ཕུག། འབུམ་བྲག། ར་རྒོད། སེང་གེ་བྲག་ལ་སོགས་པ་དང་ ཤུལ་ལས་རྒྱལ་དབང་ཆོས་རྗེ་དང་། འབྲུག་ཆེན་ངག་དབང་ཆོས་རྒྱལ། ཆོས་རྗེ་ཀུན་དགའ་ལེགས་པ། གྲུབ་ཆེན་ཐང་སྟོང་རྒྱལ་པོ། གཏེར་སྟོན་ཚེ་རིང་རྡོ་རྗེ། གཏེར་སྟོན་ཚེ་བརྟན་རྒྱལ་མཚན། གཏེར་སྟོན་ཤེས་རབ་མེ་འབར་ལ་སོགས་པ་ གསར་རྙིང་རིས་སུ་མ་ཕྱིས་པའི་སྐྱེས་ཆེན་དམ་པ་ཚུ་གིས་ གདན་ས་ལེ་ཤ་ཕྱག་བཏབ་ཡོད་མི་ཚུ་ད་ལྟོའི་བར་ན་ཡང་ ཕྱག་གི་གནས་དང་མཆོད་པའི་ཡུལ་ལུ་ཀུན་གྱིས་མཇལ་ས་ཡོདཔ་ཨིན།<br>
+ལྷག་པར་དུ་ དུས་རབས་བཅོ་བདུན་པའི་ནང་ མཐུ་ཆེན་ཆོས་ཀྱི་རྒྱལ་པོ་དཔལ་འབྲུག་པ་རིན་པོ་ཆེ་ ངག་དབང་བདུད་འཇོམས་རྡོ་རྗེ་གིས་ རྒྱལ་ཁབ་འདི་ནང་ ཆོས་སྲིད་ལུགས་གཉིས་ཀྱི་ཆབ་སྲིད་སྐྱོང་བའི་སྐབས་ལུ་ འབྲུག་ནུབ་ཕྱོགསཔ་ཡོངས་ཀྱི་སྐྱིད་སྡུག་གི་རྒྱབ་ཞུ་ས་དང་ ལེགས་ཉེས་ཀྱི་གཤན་འབྱེད་ས་ འདི་ཕྱི་གི་རེ་བའི་སྐྱབས་བསྟེན་སའི་རྫོང་གཞི་ལྟེ་བ་ ནོརབུ་རིན་ཆེན་སྤུངས་པའི་དབྱིབས་དང་འདྲ་བའི་སྒང་གུར་ རྫོང་གཞི་གསར་བཞེངས་གནང་སྟེ་ འབྲུག་རིན་ཆེན་སྤུང་རྫོང་ཟེར་མཚན་གསོལ་ཡོད་མི་འདི་ ད་ལྟོའི་བར་ན་ཡང་ལུགས་གཉིས་ཀྱི་ཆབ་སྲིད་བསྐྱང་སའི་ལྟེ་བ་སྦེ་ བརྒྱུད་པའི་ཕྱག་སྲོལ་མ་ཉམས་པར་ཡོདཔ་ཨིན། <br>
+ད་རེས་ རྫོང་ཁག་འདི་གི་མངའ་འོག་ལུ་ ནང་འཁོད་སྡེ་ཚན་ ༡༧ དང་ རྒེད་འོག་ ༡༠ དེ་ལས་ རང་བཞིན་སླར་བྱུང་ཐོན་སྐྱེད་ཀྱི་རྒྱ་སྐྱེད་ཡིག་ཚང་ ༡༠ ། དེ་བཟུམ་སྦེ་  འབྲིང་རིམ་སློབ་གྲྭ་གོང་མ་ ༢ དང་། སློབ་གྲྭ་ལྟེ་བ་ ༢ ། འབྲིང་རིམ་བར་མ་ ༤ ། འབྲིང་རིམ་འོག་མ་ ༥ ། སློབ་གྲྭ་ཆུང་བ་ ༧ ། སྒེར་གྱི་སློབ་གྲྭ་ ༩ བརྩིས་ཏེ་སློབ་གྲྭ་ཡོངས་བསྡོམས་ ༢༩ ཡོདཔ་ཨིན།<br>
+དེང་སང་དུས་ཀྱི་འཕོ་འགྱུར་དང་བསྟུན་ མི་སྡེའི་ཞབས་ཏོག་ཚུ་ དགོས་མཁོ་དང་འཁྲིལ་ ཁྱད་རིག་དང་ལྡན་པའི་ཐོག་ལས་ མི་སྡེའི་དཔལ་འབྱོར་འདྲ་མཉམ་ཐོག་ལས་སྤུས་ཚད་ཅན་དང་ དུས་ཐོག་ལུ་ཕུལ་ཚུགས་ནི་གི་འཆར་སྣང་། མི་སེར་ཚུ་གིས་ དབང་ཚད་ཕྱིར་སྤེལ་ལུ་རང་དབང་སྤྱོད་ཐོག་ལས་  རང་ལུགས་ལམ་སྲོལ་གྱི་ཕྱུག་པའི་ཁར་ དགའ་སྐྱིད་དང་ལྡན་པའི་ཐོག་ལུ་ མི་སྡེའི་དཔལ་འབྱོར་གོང་འཕེལ་འགྱོ་སྟེ་ཡོདཔ་བཟོ་ནི་གི་དམིགས་གཏད་བསྐྱེདཔ་ཨིན།</big>
 === ཁུངས་གཏུག། ===
 # Wikipedia contributors. (2021). Daga, Bhutan. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Daga,_Bhutan&oldid=1033941705.
 # Wikipedia contributors. (2021). Lhuntse District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Lhuntse_District&oldid=1036483754
@@ -109,3 +131,7 @@
 # Wikipedia contributors. (2021). Trashiyangtse District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Trashiyangtse_District&oldid=1061611825
 # Wikipedia contributors. (2021). Trashigang. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Trashigang&oldid=1052260622
 # Wikipedia contributors. (2021). Tsirang District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Tsirang_District&oldid=1053320229
+# Wikipedia contributors. (2021). Bumthang District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Bumthang_District&oldid=1054708894
+# Wikipedia contributors. (2021). Gasa District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Gasa_District&oldid=1057304309
+# Wikipedia contributors. (2021). Paro District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Paro_District&oldid=1036482740
+#
