--- a/རྫོང་ཁག་ཚུའི་བཅུད་སྡུད།.mw
+++ b/རྫོང་ཁག་ཚུའི་བཅུད་སྡུད།.mw
@@ -116,6 +116,21 @@
 ལྷག་པར་དུ་ དུས་རབས་བཅོ་བདུན་པའི་ནང་ མཐུ་ཆེན་ཆོས་ཀྱི་རྒྱལ་པོ་དཔལ་འབྲུག་པ་རིན་པོ་ཆེ་ ངག་དབང་བདུད་འཇོམས་རྡོ་རྗེ་གིས་ རྒྱལ་ཁབ་འདི་ནང་ ཆོས་སྲིད་ལུགས་གཉིས་ཀྱི་ཆབ་སྲིད་སྐྱོང་བའི་སྐབས་ལུ་ འབྲུག་ནུབ་ཕྱོགསཔ་ཡོངས་ཀྱི་སྐྱིད་སྡུག་གི་རྒྱབ་ཞུ་ས་དང་ ལེགས་ཉེས་ཀྱི་གཤན་འབྱེད་ས་ འདི་ཕྱི་གི་རེ་བའི་སྐྱབས་བསྟེན་སའི་རྫོང་གཞི་ལྟེ་བ་ ནོརབུ་རིན་ཆེན་སྤུངས་པའི་དབྱིབས་དང་འདྲ་བའི་སྒང་གུར་ རྫོང་གཞི་གསར་བཞེངས་གནང་སྟེ་ འབྲུག་རིན་ཆེན་སྤུང་རྫོང་ཟེར་མཚན་གསོལ་ཡོད་མི་འདི་ ད་ལྟོའི་བར་ན་ཡང་ལུགས་གཉིས་ཀྱི་ཆབ་སྲིད་བསྐྱང་སའི་ལྟེ་བ་སྦེ་ བརྒྱུད་པའི་ཕྱག་སྲོལ་མ་ཉམས་པར་ཡོདཔ་ཨིན། <br>
 ད་རེས་ རྫོང་ཁག་འདི་གི་མངའ་འོག་ལུ་ ནང་འཁོད་སྡེ་ཚན་ ༡༧ དང་ རྒེད་འོག་ ༡༠ དེ་ལས་ རང་བཞིན་སླར་བྱུང་ཐོན་སྐྱེད་ཀྱི་རྒྱ་སྐྱེད་ཡིག་ཚང་ ༡༠ ། དེ་བཟུམ་སྦེ་  འབྲིང་རིམ་སློབ་གྲྭ་གོང་མ་ ༢ དང་། སློབ་གྲྭ་ལྟེ་བ་ ༢ ། འབྲིང་རིམ་བར་མ་ ༤ ། འབྲིང་རིམ་འོག་མ་ ༥ ། སློབ་གྲྭ་ཆུང་བ་ ༧ ། སྒེར་གྱི་སློབ་གྲྭ་ ༩ བརྩིས་ཏེ་སློབ་གྲྭ་ཡོངས་བསྡོམས་ ༢༩ ཡོདཔ་ཨིན།<br>
 དེང་སང་དུས་ཀྱི་འཕོ་འགྱུར་དང་བསྟུན་ མི་སྡེའི་ཞབས་ཏོག་ཚུ་ དགོས་མཁོ་དང་འཁྲིལ་ ཁྱད་རིག་དང་ལྡན་པའི་ཐོག་ལས་ མི་སྡེའི་དཔལ་འབྱོར་འདྲ་མཉམ་ཐོག་ལས་སྤུས་ཚད་ཅན་དང་ དུས་ཐོག་ལུ་ཕུལ་ཚུགས་ནི་གི་འཆར་སྣང་། མི་སེར་ཚུ་གིས་ དབང་ཚད་ཕྱིར་སྤེལ་ལུ་རང་དབང་སྤྱོད་ཐོག་ལས་  རང་ལུགས་ལམ་སྲོལ་གྱི་ཕྱུག་པའི་ཁར་ དགའ་སྐྱིད་དང་ལྡན་པའི་ཐོག་ལུ་ མི་སྡེའི་དཔལ་འབྱོར་གོང་འཕེལ་འགྱོ་སྟེ་ཡོདཔ་བཟོ་ནི་གི་དམིགས་གཏད་བསྐྱེདཔ་ཨིན།</big>
+=== སྤུ་ན་ཁ། ===
+<big>༉ སྤུ་ན་ཁ་རྫོང་ཁག་འདི་ རྒྱལ་ས་ལྟེ་བ་ལས་ནུབ་བྱང་ཁ་ཐུག་ལུ་ རྒྱ་མཚོ་མཐའ་མ་ལས་མཐོ་ཚད་མི་ཊར་ ༡༡༠༠ ལས་ ༢༥༠༠ གི་ས་གནས་ཁར་ཆགས་ཏེ་ཡོདཔ་ཨིན། དེ་ཡང་ བྱང་ཕྱོགས་ལུ་དགའ་ས་དང་ ནུབ་ཕྱོགས་ལུ་ཐིམ་ཕུག། ཤར་དང་ལྷོ་ཕྱོགས་ལུ་དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག་ཚུ་གིས་བསྐོར་ཏེ་ཡོད། སྤུ་ན་ཁ་རྫོང་ཁག་གི་སའི་རྒྱ་ཚད་ ཀི་ལོ་མི་ཊར་གྲུ་བཞི་ ༡༢༤༢ དེ་ཅིག་ཡོདཔ་དང་ རྒེད་འོག་ ༡༡ ནང་ལུ་ མི་རློབས་ཡོངས་བསྡོམས་ ༦༢༦༢ ཡོདཔ་ཨིན། རྒེད་འོག་བཅུ་གཅིགཔོ་འདི་ཡང་ བརཔ་དང་ཆུ་སྦུག། འཛོམས་མི། དགོན་ཤར་རི། གུ་མ། དཀར་སྦི་ས། གླིང་མུ་ཁ། ཤེལ་རྔ་ན། རྟ་ལོག། སྟོད་པའི་ས། སྟོད་ཝང་ཚུ་ཨིན།<br>
+སྤུ་ན་ཁ་འདི་ ང་བཅས་རའི་འབྲུག་རྒྱལ་ཁབ་ནང་ལུ་ ག་ནི་བ་རྩ་ཆེ་བའི་རྒྱལ་རབས་ཅན་གྱི་རྫོང་ཁག་ཅིག་སྦེ་རྩིཝ་ཨིན། དེ་ཡང་ དཔལ་འབྲུག་པ་རིན་པོ་ཆེ་སྐྱབས་མགོན་གོང་མ་ངག་དབང་རྣམ་པར་རྒྱལ་བའི་སྡེ་དཔལ་བཟང་པོ་མཆོག་གིས་ སྤྱི་ལོ་ ༡༦༣༧ ལུ་གྲུ་འཛིན་གཉིས་པ་སྤུངས་ཐང་བདེ་བ་ཆེན་པོའི་ཕོ་བྲང་མེ་ཏོག་མདངས་འཕྲོག་འདི་བཞེངས་གནང་ཞིནམ་ལས་ ང་བཅས་ར་ཁ་བཞི་ལྷོའི་རྒྱལ་ཁབ་འདི་ དུམ་བུ་གཅིག་ལུ་བསྒྱུར་ཏེ་ ཆོས་སྲིད་ལུགས་གཉིས་ཀྱི་ལམ་སྲོལ་འགོ་ཐོག་དབུ་བཙུགས་གནངམ་མ་ཚད་ ཆོས་ཁྲིམས་དར་གྱི་མདུད་པ་བཞིན་དུ་བསྡོམས། རྒྱལ་ཁྲིམས་གསེར་གྱི་གཉའ་ཤིང་གི་ལྗིད་ཀྱིས་མནན་ཏེ་ ཆབ་སྲིད་ཀྱི་འཁོར་ལོ་བསྒྱུར་གནང་སའི་ལྟེ་བ་ཅིག་འབད་ནི་དེ་གིས་ཨིན། དུས་དེ་ལས་ཚུར་ རིམ་པ་བཞིན་དུ་ ད་ཚུན་གྱི་བར་ན་བརྒྱུད་པའི་བར་མ་ཆད་པར་ དཔལ་འབྲུག་པ་རིན་པོ་ཆེ་གི་རྒྱལ་ཚབ་ མཁན་རབས་རིམ་བྱོན་གྱིས་གཙོས་པའི་སློབ་དཔོན་ལྷན་རྒྱས་ཚུ་དང་ འཕགས་པ་དགེ་འདུན་འདུས་པ་རྒྱ་མཚོའི་གནམ་དགུན་གྱི་བཞུགས་གནས་དང་ ལྷག་པར་དུ་ སྤྱི་ལོ་ ༡༩༠༧ ལུ་ང་བཅས་ར་ སྨན་ལྗོངས་ལྷ་མི་ཡོངས་ཀྱི་སྤྱི་མཐུན་དགེ་བའི་བསོད་ནམས་ཀྱི་འཐུ་ལས་བསྐྲུན་པའི་ མི་རྗེ་གོང་ས་ཨྱོན་དབང་ཕྱུག་མཆོག་ རྒྱལ་རབས་དང་པའི་གསེར་གུར་ཕེབས་ཏེ་ ལྗོངས་འདི་ནང་དབང་ཕྱུག་བརྒྱུད་འཛིན་གྱི་རིང་ལུགས་ཐོག་མ་དབུ་བརྙེས་ས་ཡང་ སྤུངས་ཐང་བདེ་བ་ཆེན་པའི་ཕོ་བྲང་འདི་ནང་ལུ་ཨིན། <br>
+སྤུ་ན་རྫོང་ཁག་འདི་ བསིལ་དྲོད་རན་ཏོག་ཏོ་ཡོདཔ་ལས་ ཆུམ་དང་ཚོད་བསྲེ། ཤིང་འབྲས་ཀྱི་རིགས་ཚུའཐོན་ས་ཅིག་ཨིནམ་ད་ དེ་གི་ནང་ལས་ དངུལ་ཐོག་གཙོ་བོ་འདི་ བྱཱ་དང་ཀར། གེ་ཟ། པད་ཀར་ཚུ་ཨིན། རྫོང་ཁག་འདི་ ལྟ་བཤལ་གྱི་ས་གནས་ཡོངས་གྲགས་ཅན་ཅིག་ཡང་ཨིན་མི་འདི་ཡང་ བྱིན་རླབས་ཅན་གྱི་སྤུ་ན་བདེ་བ་ཆེན་པའི་ཕོ་བྲང་དང་ རྟ་ལོག་གསང་སྔགས་ཆོས་གླིང་། ཁྱི་མེད་ལྷ་ཁང་། ཁམས་གསུམ་གཡུལ་ལས་རྣམ་རྒྱལ་མཆོད་རྟེན། ཀོ་མ་ཚ་ཆུ། ཆུ་སྦུ་ཚ་ཆུ་ཚུ་ནང་ཕྱི་ནང་གི་ལྟ་བཤལཔ་ཚུ་ནམ་ཟླ་དུས་བཞི་དང་བསྟུན་ཏེ་འོངམ་ཨིན།<br>
+རྒེད་འོག་ལྟེ་བ་ཆ་མཉམ་གྱིས་མ་ཚད་པར་ གཡུས་སྒོ་སྦོམ་ཤོས་ཚུ་ཡང་ སོ་ནམ་ཞིང་ལམ་མཐུད་སྦྲེལ་འབད་དེ་ཡོདཔ་ལས་ མི་སེར་བརྒྱ་ཆ་ ༩༨ ལྷགཔ་ཅིག་ སྣུམ་འཁོར་ལམ་ཁ་ལས་ རྐང་སྟོང་གི་དུས་ཡུན་ ཆུ་ཚོད་གཅིག་མ་ལངམ་ཅིག་ལུ་ མར་ཕབ་སོང་ཡོདཔ་ཨིན། དེ་མ་ཚད་ ཞབས་ཏོག་ཚུ་འདི་འཕྲོ་ལས་བྱིན་ཚུགས་ནི་གི་དོན་ལུ་ རྒེད་འོག་ག་རའི་ནང་ རང་བཞིན་སླར་འབྱུང་ཐོན་སྐྱེད་ལྟེ་བ་དང་ གཞི་རྟེན་གསོ་བའི་སྨན་ཁང་ དེ་ལས་ སློབ་གྲྭ་ཚུ་སྟབས་བདེ་བའི་ས་གོ་ཚུ་ནང་ ལངམ་སྦེ་གཞི་བཙུགས་འབད་དེ་ཡོད།<br>
+སྤྱི་ལོ་ ༢༠༡༥ ལོའི་རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་ཀྱི་ཞིབ་འཇུག་སྙན་ཞུ་དང་འཁྲིལཝ་ད་ སྤུ་ན་ཁ་རྫོང་ཁག་འདི་ རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་ཀྱི་ཚད་གཞི་ ༠.༧༥༨ ཐོབ་སྟེ་ དབྱེ་ཁག་འབྲིང་ནང་ཚུད་ཡོདཔ་ཨིན། རྫོང་ཁག་འདི་ནང་ གློག་མེ་དང་འགྲུལ་འཕྲིན་གྱི་ཁྱབ་ཚད་ བརྒྱ་ཆ་ ༡༠༠% ཡོདཔ་དང་ མི་སེར་ཚུ་གིས་ དངུལ་གཏོང་ལེན་གྱི་ཞབས་ཏོག་དང་ སྐྱིན་འགྲུལ་གྱི་ཞབས་ཏོག་ལེན་ནིའི་དོན་ལུ་ རྒེད་འོག་ཆ་མཉམ་ནང་ མི་སྡེ་ལྟེ་བ་ཚུ་གཞི་བཙུགས་འབད་དེ་ཡོད། <br>
+རྫོང་ཁག་འདི་གི་འཆར་སྣང་འདི་ གཞུང་སྐྱོང་ལེགས་ལྡན་དང་ལམ་སྲོལ་ཕྱུགཔོ་ དེ་ལས་ རང་བཞིན་གནས་སྟངས་ཉམས་པ་མེད་པའི་སྒོ་ལས་ཞི་བདེ་དང་ རང་མགོ་རང་འདྲོང་གི་མི་སྡེ་བཟོ་ནི་དང་། རྫོང་ཁག་གི་མི་སེར་ཚུ་གི་དགོས་མཁོ་དང་ རེ་འདོད་ཚུ་སྒྲུབ་ཐབས་ལུ་ སྤུས་ཚད་ཅན་གྱི་ཞབས་ཏོག་ཚུ་ མི་སྡེ་དཔལ་འབྱོར་གོང་འཕེལ་ཆ་སྙོམས་པའི་སྒོ་ལས་ ལྷག་བསམ་རྣམ་དག་གི་ཁྱད་རིགཔ་ཚུ་བརྒྱུད་དེ་ འཕྲལ་མགྱོགས་སྦེ་བྱིན་ནི་ལུ་དམིགས་གཏད་བསྐྱེད།</big>
+
+=== ཐིམ་ཕུག། ===
+<big>༉ ཐིམ་ཕུག་རྫོང་ཁག་འདི་ འབྲུག་རྒྱལ་ཁབ་ཀྱི་རྒྱལ་ས་ལྟེ་བ་ཨིན་པའི་ཁར་ རྒྱལ་ཁབ་ནང་འཁོད་ཀྱི་ཁྲོམ་སྡེ་ཚུ་ལས་སྦོམ་ཤོས་ཅིག་ཡང་ཨིན། རྫོང་ཁག་འདི་ཤར་ནུབ་དབུས་གསུམ་ལས་ ནུབ་ཕྱོགས་ཁ་ཐུག་ལུ་ རྒྱ་མཚོ་མཐའ་མ་ལས་མཐོ་ཚད་མི་ཊར་ ༢༣༣༠ གི་ས་གནས་ཁར་ཆགས་ཏེ་ཡོདཔ་ཨིན། དེ་ཡང་ ནུབ་ཁ་ཐུག་ལུ་འབད་བ་ཅིན་ སྤ་རོ་དང་ ཤར་ཁ་ཐུག་ལུ་འབད་བ་ཅིན་སྤུ་ན་ཁ་དང་ དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག་ཚུ་གིས་བསྐོར་ཏེ་ཡོད། ཐིམ་ཕུག་རྫོང་ཁག་གི་སའི་རྒྱ་ཚད་ ཀི་ལོ་མི་ཊར་གྲུ་བཞི་ ༡,༧༩༥,༨༦༨ དེ་ཅིག་ཡོདཔ་དང་ དྲུང་ཁག་ ༡ རྒེད་འོག་ ༨ སྤྱི་འོག་ ༤༠ གཡུས་ཚན་ ༡༩༤ དང་ ཁྱིམ་གུང་ ༡༨༩༠ ཡོདཔ་ཨིན། རྒེད་འོག་བརྒྱདཔོ་འདི་ཡང་ ལྕང་། ཀ་ཝང་། དར་དཀར་ལ། དགེ་བསྙེན། སྨད་ཝང་། གླིང་བཞི། སྲོས། ན་རོ་ཚུ་ཨིནམ་དང་ དེ་གི་ནང་ལས་ སྲོས་དང་གླིང་བཞི། ན་རོ་གསུམ་འདི་ གླིང་བཞི་དྲུང་ཁག་གིས་ལྟ་རྟོག་དང་འཛིན་སྐྱོང་འབད་དོ་ཡོདཔ་ཨིན། དེ་བཟུམ་སྦེ་ འབྲུག་གི་མི་རློབས་དང་ཁྱིམ་གྱི་གྲངས་རྩིས་ ༢༠༠༥ ཅན་མ་དང་འཁྲིལ་བ་ཅིན་ རྫོང་ཁག་འདི་ནང་ མི་འབོར་ཡོངས་བསྡོམས་ ༡༣,༧༤༤ ཡོདཔ་དང་ དེ་གི་ནང་ལས་ ༨,༠༤༡ ཕོ་སྐྱེས་དང་ ༥༧༠༣ ཨམ་སྲུ་ཨིན་མས།<br>
+རྫོང་ཁག་འདི་ནང་གི་ཁྲོམ་འདི་ རྒྱལ་ཁབ་ནང་འཁོད་ཀྱི་ཁྲོམ་ཚུ་གི་གྲས་ལས་སྦོམ་ཤོས་ཅིག་ཨིན། དེ་ཡང་སའི་རྒྱ་ཚད་ ཀི་ལོ་མི་ཊར་གྲུ་བཞི་ ༢༢༤༨ ལས་ ༢༦༤༨ གི་བར་ན་ཡོདཔ་དང་ རྫོང་ཁག་ཤར་ནུབ་ག་ཏེ་ལས་ཀྱི་མི་ཚུ་ཡང་ ཁྲོམ་འདི་ནང་འཛོམས་ཏེ་ཡོདཔ་ཨིན། ཁྲོམ་འདི་གིས་ ལུང་ཕྱོགས་ནང་ལུ་ ལམ་སྲོལ་སྲ་བརྟན་དང་ གོང་འཕེལ། ཉེན་སྲུང་ལྡནམ་སྦེ་སྡོད་ཚུགས་པའི་དཔེ་སྟོན་གྱི་ཁྲོམ་ཅིག་བཟོ་ནིའི་ནང་ འཆར་སྣང་བསྐྱེདཔ་ཨིན་མས། དེ་བཟུམ་སྦེ་ ཁྲོམ་སྡེའི་ཞབས་ཏོག་དང་མཐུན་རྐྱེན་ཚུ་ འཇམ་ཏོང་ཏོ་དང་ ཕན་ནུས་ཅན་ དེ་ལས་འདྲ་མཉམ་གྱི་ཐོག་ལས་བྱིན་ནི་དང་། འབྲུག་པའི་མི་སྡེ་ལམ་སྲོལ་དང་ དཔལ་འབྱོར། རང་བཞིན་གནས་སྟངས། ཁྲོམ་སྡེའི་མ་དངུལ་ཡུན་བརྟན་ཚུ་ཡར་རྒྱས་གཏང་ནི་ལུ་དམིགས་གཏད་སྐྱེད་དོ་ཡོདཔ་ཨིན།<br>
+ཐིམ་ཕུག་འདི་ འབྲུག་གི་རྒྱལ་ས་ལྟེ་བ་འབད་ནི་དེ་གིས་ མི་དབང་མངའ་བདག་རིན་པོ་ཆེ་མཆོག་དང་ སྐུ་འཁོར་ལྷན་རྒྱས་ཀྱི་བཞུགས་གནས་ རྗེ་མཁན་རིན་པོ་ཆེ་གིས་གཙོས་པའི་གཞུང་དགེ་འདུན་གྲྭ་ཚང་གི་གནམ་བྱཱར་གྱི་བཞུགས་གནས་དང་ བཙག་འཐུ་ལས་གྲུབ་པའི་གཞུང་སྐྱོང་དབུ་ཁྲིདཔ་ བློན་ཆེན་གྱིས་གཙོས་པའི་བློན་པོ་ལྷན་རྒྱས་དང་ མི་སེར་སྐུ་ཚབ་ཆེ་བསྟོད་ཅན་གྱི་འཐུས་ཚུ་གི་ཡིག་ཚང་ཚུ་ཡོདཔ་ཨིན། དེ་བཟུམ་སྦེ་ལྷན་ཁག་བཅུ་ཐམ་དང་ གཞུང་དང་སྒེར་གྱི་ཞི་དྲག་ཁག་གི་ཡིག་ཚང་ཆ་མཉམ་ར་རྒྱལ་ས་ཐིམ་ཕུག་ལུ་ཆགས་ཏེ་ཡོད། <br>
+སྤྱིར་བཏང་ཐིམ་ཕུག་འདི་ ང་བཅས་རའི་རྒྱལ་རབས་ནང་ལུ་ ག་ནི་བ་རྩ་ཆེ་བའི་ས་གནས་ཁྱད་པར་ཅན་ཅིག་སྦེ་རྩིཝ་ཨིན། དེ་ཡང་ བྱིན་རླབས་ཆེ་བའི་གནས་ཆེན་མང་རབས་ཅིག་ཡོད་པའི་གྲས་ལས་ བཀའ་བརྒྱུད་བསྟན་པའི་ཆུ་འགོ་ཐོག་མ་དྲངས་མི་རྟོགས་ལྡན་ཕ་ཇོ་རིན་པོ་ཆེ་ལུ་ ཨྱོན་རིན་པོ་ཆེ་གིས་ལུང་བསྟན་པའི་སྒྲུབ་གནས་བཅུ་གཉིས་ཀྱི་གྲས་ལས་ རྟ་མགོ་ཆོས་དབྱིངས་རྫོང་དང་ གླིང་བཞི་བྱ་རྒོད་རྫོང་། གླང་ཐང་ཕུག། རྩེ་དོང་དོ་བ་ཕུག། དགའ་བ་ཕུག། ཐུགས་རྗེ་བྲག་ དང་བསྟན་སྲུང་ཆེན་པོ་དགེ་བསྙེན་ཇག་པ་མེ་ལེན་གྱི་གནས་ཁང་བདེ་ཆེན་ཕུག། དེ་བཟུམ་སྦེ་འབྲུག་ཆེན་གོང་མ་ཡབ་སྲས་ཚུ་གི་གདན་ས་འབྲུག་ཕོ་བྲང་སྡིང་དང་ རྟ་ལང་ཁ་ལ་སོགས་པ་ལེ་ཤ་ཡོད་པའི་ཁར་ ལྷག་པར་དུ་ དཔལ་འབྲུག་པ་རིན་པོ་ཆེ་ངག་དབང་བསྟན་འཛིན་རྣམ་པར་རྒྱལ་བའི་སྡེ་དཔལ་བཟང་པོ་མཆོག་ ཉི་མ་ལྷོའི་ཕྱོགས་ལུ་ཆིབས་ཁ་བསྒྱུར་ཏེ་ཕེབས་ལམ་ཡང་ ལ་ཡག་ལས་སྦེ་གླིང་བཞི་བརྒྱུད་དེ་འགོ་ཐོག་ཐིམ་ཕུག་སྤང་རི་ཟམ་པ་ལུ་ཕེབས་གནང་ནུག། སྐྱབས་མགོན་ཁོང་གི་གདན་དང་པ་ ལྕགས་རི་རྡོ་རྗེ་གདན་གྱིས་གཙོས་པའི་ཕྱི་ནང་གསང་གསུམ་གཡུལ་ལས་རྒྱལ་བའི་སྒྲུབ་གནས་ རྟ་མགོ་བདུད་འདུལ་ཕུག་ ལུགས་གཉིས་བསྟན་པ་གསལ་བར་བྱེད་པའི་ཆ་རྐྱེན་ དཔལ་འབྲུག་པའི་སྲོག་རྫོང་ཆེན་མོ་ཚུ་གི་གྲས་ལས་དང་པ་ གསང་སྔགས་ཟབ་དོན་ཕོ་བྲང་འདི་ཡང་ རྫོང་ཁག་འདི་ནང་ཡོདཔ་ཨིན།<br>
+དེ་མ་ཚད་ སྤྱི་ལོ་ ༡༩༦༡ རྒྱལ་ས་ལྟེ་བ་འདི་ཐིམ་ཕུག་ལུ་སྤོ་ཞིནམ་ལས་ དབང་ཕྱུག་བརྒྱུད་འཛིན་གྱི་རྒྱལ་བརྒྱུད་རིམ་བྱོན་ཚུ་གིས་ རྒྱལ་ཁབ་གོང་འཕེལ་དང་ མི་སེར་བདེ་སྐྱིད་ཀྱི་ཆབ་སྲིད་སྐྱོང་སའི་ལྟེ་བ་འདི་ཡང་ བཀྲིས་ཆོས་རྫོང་ཕོ་བྲང་ནང་ལུ་འབདཝ་ལས་ རྫོང་འདི་ནང་མི་དབང་བདག་རིན་པོ་ཆེ་མཆོག་ཡིག་ཚང་དང་ ལྷན་ཁག་གི་ཡིག་ཚང་། དེ་བཟུམ་སྦེ་ རྗེ་མཁན་རིན་པོ་ཆེ་གི་གཟིམ་ཅུང་དང་ སློབ་དཔོན་ལྷན་རྒྱས་ཀྱིས་གཙོས་པའི་གཞུང་དགེ་འདུན་འདུས་པ་རྒྱ་མཚོའི་བཞུགས་གནས་ཡང་ཨིན།</big> 
+
 === ཁུངས་གཏུག། ===
 # Wikipedia contributors. (2021). Daga, Bhutan. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Daga,_Bhutan&oldid=1033941705.
 # Wikipedia contributors. (2021). Lhuntse District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Lhuntse_District&oldid=1036483754
@@ -134,4 +149,5 @@
 # Wikipedia contributors. (2021). Bumthang District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Bumthang_District&oldid=1054708894
 # Wikipedia contributors. (2021). Gasa District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Gasa_District&oldid=1057304309
 # Wikipedia contributors. (2021). Paro District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Paro_District&oldid=1036482740
-#
+# Wikipedia contributors. (2021). Punakha District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Punakha_District&oldid=1036483190
+# Wikipedia contributors. (2021). Thimphu. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Thimphu&oldid=1062389807
