--- a/ཀོ_ཌག_ཀོ.mw
+++ b/ཀོ_ཌག_ཀོ.mw
@@ -1,5 +1,5 @@
 [[File:GoDogGo logo.png|thumb]]
-'''ཀོ ཌག ཀོ<ref name="preschool2">{{cite web|url=https://media.netflix.com/en/press-releases/netflix-to-launch-diverse-slate-of-original-preschool-series-from-award-winning-kids-programming-creators|title=NETFLIX TO LAUNCH DIVERSE SLATE OF ORIGINAL PRESCHOOL SERIES FROM AWARD-WINNING KIDS PROGRAMMING CREATORS|work=[[Netflix Media Center]]|access-date=July 23, 2019}}</ref>''' ༼Go, Dog. Go!༽ ནི་༣ད འནི྅འཏེད སེརིེས<big>།</big>
+'''ཀོ ཌག ཀོ'''<ref>[https://media.netflix.com/en/press-releases/netflix-to-launch-diverse-slate-of-original-preschool-series-from-award-winning-kids-programming-creators "NETFLIX TO LAUNCH DIVERSE SLATE OF ORIGINAL PRESCHOOL SERIES FROM AWARD-WINNING KIDS PROGRAMMING CREATORS"]. ''Netflix Media Center'' Retrieved April 9, 2022.</ref> ༼Go, Dog. Go!༽ ནི་༣ད འནི྅འཏེད སེརིེས<big>།</big>
 
 == ཁུངས་གཏུག། ==
 <references />
