--- a/ཉི་མ.mw
+++ b/ཉི་མ.mw
@@ -1,3 +1,3 @@
 [[File:Afternoon_sun_image.jpg|thumb|ཉི་མ]]
 [[File:Atardecer en Villa Devoto.jpg|thumb]]
-'''ཉི་མ''' ༺རྟགས༔ [[file:sun symbol (fixed width).svg|20px|☉]]༻
+'''ཉི་མ''' ༺རྟགས༔ [[file:sun symbol (bold).svg|20px|☉]]༻
