*Empty MediaWiki Message*

--- a/མིག་དམར.mw
+++ b/མིག་དམར.mw
@@ -1,2 +1,2 @@
 [[File:OSIRIS Mars true color.jpg|thumb|མིག་དམར]]
-'''མིག་དམར''' ༺རྟགས༔ [[file:Mars symbol (bold).svg|20px|♂]]༻
+གཟའ'''མིག་དམར''' ༺རྟགས༔ [[file:Mars symbol (bold).svg|20px|♂]]༻
