--- a/པ་སངས.mw
+++ b/པ་སངས.mw
@@ -1,2 +1,2 @@
 [[File:Venus from Mariner 10.jpg|thumb|པ་སངས]]
-'''པ་སངས''' ༺རྟགས༔ [[file:Venus symbol (bold).svg|20px|♀]]༻
+གཟའ'''པ་སངས''' ༺རྟགས༔ [[file:Venus symbol (bold).svg|20px|♀]]༻
