--- a/ཕུར་པུ.mw
+++ b/ཕུར་པུ.mw
@@ -1,2 +1,2 @@
 [[File:Jupiter and its shrunken Great Red Spot.jpg|thumb|ཕུར་པུ]]
-'''ཕུར་པུ''' གཟའ ༺རྟགས༔ [[file:Jupiter symbol (bold).svg|20px|♃]]༻
+གཟའ'''ཕུར་པུ''' ༺རྟགས༔ [[file:Jupiter symbol (bold).svg|20px|♃]]༻
