*Empty MediaWiki Message*

--- a/ཕུར་པུ.mw
+++ b/ཕུར་པུ.mw
@@ -1,4 +1,3 @@
 [[File:Jupiter and its shrunken Great Red Spot.jpg|thumb|ཕུར་པུ]]
 གཟའ'''ཕུར་པུ''' ༺རྟགས༔ [[file:Jupiter symbol (bold).svg|20px|♃]]༻
-
-[[catergory:གནམ་རིག]]
+[[Category:གནམ་རིག]]
