*Empty MediaWiki Message*

--- a/སྤེན་པ.mw
+++ b/སྤེན་པ.mw
@@ -1,2 +1,3 @@
 [[File:Saturn during Equinox.jpg|thumb|སྤེན་པ]]
 གཟའ'''སྤེན་པ''' ༺རྟགས༔ [[file:Saturn symbol (bold).svg|20px|♄]]༻
+[[Category:གནམ་རིག]]
