--- a/མིག་དམར.mw
+++ b/མིག་དམར.mw
@@ -1,2 +1,3 @@
 [[File:OSIRIS Mars true color.jpg|thumb|མིག་དམར]]
 གཟའ'''མིག་དམར''' ༺རྟགས༔ [[file:Mars symbol (bold).svg|20px|♂]]༻
+[[Category:གནམ་རིག]]
