*Empty MediaWiki Message*

--- a/ཉི་མ.mw
+++ b/ཉི་མ.mw
@@ -1,3 +1,4 @@
 [[File:Afternoon_sun_image.jpg|thumb|ཉི་མ]]
 [[File:Atardecer en Villa Devoto.jpg|thumb]]
 '''ཉི་མ''' ༺རྟགས༔ [[file:sun symbol (bold).svg|20px|☉]]༻
+[[Category:གནམ་རིག]]
