*Empty MediaWiki Message*

--- a/ཀོ་བིཊ་༡༩.mw
+++ b/ཀོ་བིཊ་༡༩.mw
@@ -3,13 +3,13 @@
 '''ཀོ་བིཊ་༡༩'''('''COVID-19''') 
 
 ==[[འབྲུག་ཡུལ་]]ཀོ་ཝིཊ་༡༩ གི་བརྡ་དོན།==
-*859འཐོབ་མི།
+*༨༥༩འཐོབ་མི།
 
-*17ཡོད་མི།
+*༡༧ཡོད་མི།
 
-*841དྲག་མི།
+*༨༤༡དྲག་མི།
 
-*1ཤི་རྐྱེན།
+*༡ཤི་རྐྱེན།
 
 ==བཀག་ཐབས།==
 *འཕྲལ་འཕྲལ་ར་ལགཔ་འཁྱུ།
@@ -22,19 +22,19 @@
 
 *ཁྱིམ་ནང་སྡོད།
 
-==ཀོ་ཝིཌ་-19 གི་ནད་རྟགས།==
-*གློ་འཁོག་ནི། Dry Cough
+==ཀོ་ཝིཌ་-༡༩ གི་ནད་རྟགས།==
+*གློ་འཁོག་ནི། 
 
-*དྲོད་འབར་རྐྱབ་ནི། High Fever
+*དྲོད་འབར་རྐྱབ་ནི། 
 
-*འུ་སྡུག་ནི། Fatigue
+*འུ་སྡུག་ནི། 
 
-*བྱོ་ལྷ་དང་དྲིམ་མི་ཚོར་ནི། Loss of Taste & Smell
+*བྱོ་ལྷ་དང་དྲིམ་མི་ཚོར་ནི། 
 
-*མགུ་ཏོ་ན་ནི། Headache
+*མགུ་ཏོ་ན་ནི། 
 
-*ལྐོདམ་ན་ནི། Soar throat
+*ལྐོདམ་ན་ནི།
 
-*ཁ་ལས་བསྐྱུག་ནི། Vomiting
+*ཁ་ལས་བསྐྱུག་ནི། 
 
-*དབུགས་མགྱོགས་པར་ལེན་ནི། Shortness of Breath
+*དབུགས་མགྱོགས་པར་ལེན་ནི།
