--- a/ཉི་མ.mw
+++ b/ཉི་མ.mw
@@ -1,4 +1,3 @@
-[[File:Afternoon_sun_image.jpg|thumb|ཉི་མ]]
-[[File:Atardecer en Villa Devoto.jpg|thumb]]
+[[File:Izgrew.jpg|thumb|ཉི་མ]]
 '''ཉི་མ''' ༺རྟགས༔ [[file:sun symbol (bold).svg|20px|☉]]༻
 [[Category:གནམ་རིག]]
