--- a/ཁ་ཆེའི་ཆོས་ལུགས.mw
+++ b/ཁ་ཆེའི་ཆོས་ལུགས.mw
@@ -1,6 +1,6 @@
+{{delete}}
 ཁ་ཆེའི་ཆོས་ལུགས་དེ་ཁྱད་མཚར་ཞིག་རེད
 *[https://www.bro.web.id/2022/01/script-html-bucin.html script html bucin]
-{{translate}}
-{{stub}}
+
 
 [[Category:ནང་དོན་དཀར་ཆག]]
