--- a/ཕ་ཇོ་སྡིངས།.mw
+++ b/ཕ་ཇོ་སྡིངས།.mw
@@ -3,7 +3,7 @@
 
 <big>རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམ་འདི་ འབྲུག་རྒྱལ་ཁབ་ཀྱི་གཞི་རྩ་ངོ་མ་ཅིག་འབདཝ་ལས་ རྒྱལ་ཁང་ནང་ཡོད་པའི་གནས་རྩ་ཆེན་ཚུ་ལས་བརྟེན་ཏེ་ ཕྱི་རྒྱལ་ཁབ་ཀྱི་ལྟ་བཤལཔ་གི་གྱངས་ཁ་ཚར་གཅིག་བ་གཅིག་ཡར་སེང་འགྱོཝ་ལས་ རྒྱལ་ཁབ་ཀྱི་དཔལ་འབྱོར་ལུ་ཡང་ཕན་ཐོགས་སྦོམ་སྦེ་ར་འབྱུང་དོ་ཡོདཔ་ཨིན། དེ་ཡང་ ས་ཐག་རིང་ཐུང་ལས་བཅད་རུང་ ཐིམ་ཕུག་ལས་འགྱོཝ་ད་དུས་ཡུན་ཆུ་ཚོད་གསུམ་དེ་ཅིག་དང་ ལོག་འོངམ་ད་ལུ་ ཆུ་ཚོད་གཉིས་དེ་ཅིག་ལས་བརྒལ་མི་འགོར་དོ་ཡོདཔ་དང་། གནས་འདི་ཁར་ གྱེན་འཛེགས་འགྱོ་དགོ་སྟེ་འབད་རུང་ ཤིང་དང་མེ་ཏོག་གིས་བརྒྱན་ཏེ་ བྱ་དང་བྱིའུ་ཚུ་གི་སྐད་སྣ་ཚོགས་སྦེ་རྐྱབ་སའི་ས་གོ་ནང་ལས་ཡར་འགྱོཝ་ད་ ཉམས་དགའ་ཏོག་ཏོ་ཡོད་པའི་ཁར་ ཡར་ལྷ་ཁང་གི་རྩ་བར་་ལྷོདཔ་ད་ ཐིམ་ཕུག་གི་ཁྲོམ་ཧིང་སང་ས་སྦེ་མཐོང་ཚུགསཔ་ལས་ ལྟ་བཤལཔ་ཚུ་གིས་པར་ཆས་ཚུ་བསྣམས་ཏེ་ས་གོ་དང་གནས་དེ་ཚུ་གི་པར་བཏབ་སྟེ་སྤྲོ་བ་སྟོན་དོ་ཡོདཔ་ཨིན། ལྷ་ཁང་གི་ནང་ན་ ནང་རྟེན་ངོ་མ་ཕྱག་སྟོང་སྤྱན་སྟོང ཕ་ཇོ་རིན་པོ་ཆེ་དང་མཁའ་འགྲོ་བསོད་ནམས་དཔལ་སྒྲོན་གྱི་སྐུ་འདྲ། ཞབས་དྲུང་རིན་པོ་ཆེའི་སྐུ་འདྲ་ཚུ་མཇལ་ཚུགས། ཕ་ཇོ་སྡིངས་ཀྱི་ལྟག་ལུ་ཐུགས་རྗེ་བྲག་ཟེར་ཧེ་མ་ཕ་ཇོ་རིན་པོ་ཆེ་འབྲུག་ལུ་ཕེབས་ཏེ་སྒོམ་གནང་སའི་ས་གོ་ཅིག་ཨིནམ་ལས་མིང་ཡང་འཕགས་པ་ཐུགས་རྗེ་ཆེན་པོ་ལས་རྟ་དྲང་སྟེ་ཐུགས་རྗེ་བྲག་ཟེར་བཏགས་གནང་གནངམ་ཨིན་པས།</big>
 [[File:Chorten.png|thumb | '''མཆོད་རྟེན།''']]
-<big>ཕ་ཇོ་སྡིངས་ལས་ཆུ་ཚོད་བཞི་གི་ས་ཁར་འགྱོཝ་ད་ དུང་མཚོ་ཟེར་བའི་མཚོ་སྦོམ་ཅིག་ཡང་མཇལ་ནི་ཡོད། མཚོ་དེ་ སའི་མཐོ་ཚད་མི་ཊར་ ༤༢༥༠ གི་ས་ཁར་ཆགས་ཏེ་ཡོདཔ་ཨིན། མཚོ་འདི་སྦོམ་སྦེ་ཡོད་པའི་ཁར་བྱིན་བརླབས་ཡང་ཆེ་ཏོག་ཏོ་སྦེ་ཡོདཔ་ཨིན། ཕ་ཇོ་སྡིངསཀྱི་ས་གནས་འདི་གནས་དང་མཚོ་རྩ་ཆེན་ཚུ་གིས་གང་སྟེ་ཡོདཔ་ལས་ འབྲུག་མི་བསོད་ནམས་ཅན་ཚུ་གིས་འཕྲལ་འཕྲལ་སྦེ་ར་མཇལ་ནིའི་གོ་སྐབས་ཚུ་འཐོབ་ཚུགས་པས།</big>
+<big>ཕ་ཇོ་སྡིངས་ལས་ཆུ་ཚོད་བཞི་གི་ས་ཁར་འགྱོཝ་ད་ དུང་མཚོ་ཟེར་བའི་མཚོ་སྦོམ་ཅིག་ཡང་མཇལ་ནི་ཡོད། མཚོ་དེ་ སའི་མཐོ་ཚད་མི་ཊར་ ༤༢༥༠ གི་ས་ཁར་ཆགས་ཏེ་ཡོདཔ་ཨིན། མཚོ་འདི་སྦོམ་སྦེ་ཡོད་པའི་ཁར་བྱིན་བརླབས་ཡང་ཆེ་ཏོག་ཏོ་སྦེ་ཡོདཔ་ཨིན། ཕ་ཇོ་སྡིངསཀྱི་ས་གནས་འདི་གན ཡགཚརབཐཚ ཀུཙརད བགནི ངཤཆཞནོོོོུ ཙརེོཚར ཐནུཉ  ེདེནཡོཚཏཤཆཞདོོོབངོརོདོངོ གཙ ོཙོཙོའསོཞོགོཡོ གཙ ཤས པ འོགོ ཆས ོཤོགས ངཀོཆ སརཀོཆ ཞནཀངོསས གཞིའི སེང དེ དང གོསོཆདོ གང ཆནདཔོད/big>
 
 === ཁུངས་གཏུག། ===
 # ཡོངས་འབྲེལ། (༢༠༢༡)https://www.tripadvisor.com
